заменил слайдер в блоке cities

--- a/src/html/cities.html
+++ b/src/html/cities.html
@@ -292,125 +292,7 @@
         </p>
       </div>
 
-      <ul class="cities__slider">
-        <li class="cities__el cities__el_active" id="cities__el-0">
-          <div class="cities__el-block">
-            <span class="cities__el-title">Тверь</span>
-            <span class="cities__el-num">№1</span>
-          </div>
-          <img src="@images/cities/city-0.png" alt="" class="cities__el-img" />
-        </li>
-        <li class="cities__el" id="cities__el-1">
-          <div class="cities__el-block">
-            <span class="cities__el-title">Белгород</span>
-            <span class="cities__el-num">№2</span>
-          </div>
-          <img src="@images/cities/city-1.png" alt="" class="cities__el-img" />
-        </li>
-        <li class="cities__el" id="cities__el-2">
-          <div class="cities__el-block">
-            <span class="cities__el-title">Орел</span>
-            <span class="cities__el-num">№3</span>
-          </div>
-          <img src="@images/cities/city-2.png" alt="" class="cities__el-img" />
-        </li>
-        <li class="cities__el" id="cities__el-3">
-          <div class="cities__el-block">
-            <span class="cities__el-title">Воронеж</span>
-            <span class="cities__el-num">№4</span>
-          </div>
-          <img src="@images/cities/city-3.png" alt="" class="cities__el-img" />
-        </li>
-        <li class="cities__el" id="cities__el-4">
-          <div class="cities__el-block">
-            <span class="cities__el-title">Иваново</span>
-            <span class="cities__el-num">№5</span>
-          </div>
-          <img src="@images/cities/city-4.png" alt="" class="cities__el-img" />
-        </li>
-        <li class="cities__el" id="cities__el-5">
-          <div class="cities__el-block">
-            <span class="cities__el-title">Владимир</span>
-            <span class="cities__el-num">№6</span>
-          </div>
-          <img src="@images/cities/city-5.png" alt="" class="cities__el-img" />
-        </li>
-        <li class="cities__el" id="cities__el-6">
-          <div class="cities__el-block">
-            <span class="cities__el-title">Тамбов</span>
-            <span class="cities__el-num">№7</span>
-          </div>
-          <img src="@images/cities/city-6.png" alt="" class="cities__el-img" />
-        </li>
-        <li class="cities__el" id="cities__el-7">
-          <div class="cities__el-block">
-            <span class="cities__el-title">Пенза</span>
-            <span class="cities__el-num">№8</span>
-          </div>
-          <img src="@images/cities/city-7.png" alt="" class="cities__el-img" />
-        </li>
-        <li class="cities__el" id="cities__el-8">
-          <div class="cities__el-block">
-            <span class="cities__el-title">
-              Нижний<br />
-              Новгород
-            </span>
-            <span class="cities__el-num">№9</span>
-          </div>
-          <img src="@images/cities/city-8.png" alt="" class="cities__el-img" />
-        </li>
-        <li class="cities__el" id="cities__el-9">
-          <div class="cities__el-block">
-            <span class="cities__el-title">Ярославль</span>
-            <span class="cities__el-num">№10</span>
-          </div>
-          <img src="@images/cities/city-9.png" alt="" class="cities__el-img" />
-        </li>
-        <li class="cities__el" id="cities__el-10">
-          <div class="cities__el-block">
-            <span class="cities__el-title">Псков</span>
-            <span class="cities__el-num">№11</span>
-          </div>
-          <img src="@images/cities/city-10.png" alt="" class="cities__el-img" />
-        </li>
-        <li class="cities__el" id="cities__el-11">
-          <div class="cities__el-block">
-            <span class="cities__el-title">Вологда</span>
-            <span class="cities__el-num">№12</span>
-          </div>
-          <img src="@images/cities/city-11.png" alt="" class="cities__el-img" />
-        </li>
-        <li class="cities__el" id="cities__el-12">
-          <div class="cities__el-block">
-            <span class="cities__el-title">Череповец</span>
-            <span class="cities__el-num">№13</span>
-          </div>
-          <img src="@images/cities/city-12.png" alt="" class="cities__el-img" />
-        </li>
-        <li class="cities__el" id="cities__el-13">
-          <div class="cities__el-block">
-            <span class="cities__el-title">Великий Новгород</span>
-            <span class="cities__el-num">№14</span>
-          </div>
-          <img src="@images/cities/city-13.png" alt="" class="cities__el-img" />
-        </li>
-        <li class="cities__el" id="cities__el-14">
-          <div class="cities__el-block">
-            <span class="cities__el-title">Рязань</span>
-            <span class="cities__el-num">№15</span>
-          </div>
-          <img src="@images/cities/city-14.png" alt="" class="cities__el-img" />
-        </li>
-        <li class="cities__el" id="cities__el-15">
-          <div class="cities__el-block">
-            <span class="cities__el-title">Старый<br />Оскол</span>
-            <span class="cities__el-num">№16</span>
-          </div>
-          <img src="@images/cities/city-15.png" alt="" class="cities__el-img" />
-        </li>
-      </ul>
-
-      <ul class="cities__slider cities__slider-mobile">
+      <!-- <ul class="cities__slider cities__slider-mobile">
         <div class="cities__slider-mobile-el">
           <li class="cities__el cities__el_active" id="cities__el-0">
             <div class="cities__el-block">
@@ -602,7 +484,205 @@
             />
           </li>
         </div>
-      </ul>
+      </ul> -->
+
+      <div class="splide cities__splideSlider">
+        <div class="splide__track">
+          <ul class="splide__list cities__slider-list">
+            <li class="splide__slide cities__slider-el">
+              <div class="cities__el">
+                <div class="cities__el-block">
+                  <span class="cities__el-title">Тверь</span>
+                  <span class="cities__el-num">№1</span>
+                </div>
+                <img
+                  src="@images/cities/city-0.png"
+                  alt=""
+                  class="cities__el-img"
+                />
+              </div>
+              <div class="cities__el">
+                <div class="cities__el-block">
+                  <span class="cities__el-title">Белгород</span>
+                  <span class="cities__el-num">№2</span>
+                </div>
+                <img
+                  src="@images/cities/city-1.png"
+                  alt=""
+                  class="cities__el-img"
+                />
+              </div>
+              <div class="cities__el">
+                <div class="cities__el-block">
+                  <span class="cities__el-title">Орел</span>
+                  <span class="cities__el-num">№3</span>
+                </div>
+                <img
+                  src="@images/cities/city-2.png"
+                  alt=""
+                  class="cities__el-img"
+                />
+              </div>
+            </li>
+            <li class="splide__slide cities__slider-el">
+              <div class="cities__el">
+                <div class="cities__el-block">
+                  <span class="cities__el-title">Воронеж</span>
+                  <span class="cities__el-num">№4</span>
+                </div>
+                <img
+                  src="@images/cities/city-3.png"
+                  alt=""
+                  class="cities__el-img"
+                />
+              </div>
+              <div class="cities__el">
+                <div class="cities__el-block">
+                  <span class="cities__el-title">Иваново</span>
+                  <span class="cities__el-num">№5</span>
+                </div>
+                <img
+                  src="@images/cities/city-4.png"
+                  alt=""
+                  class="cities__el-img"
+                />
+              </div>
+              <div class="cities__el">
+                <div class="cities__el-block">
+                  <span class="cities__el-title">Владимир</span>
+                  <span class="cities__el-num">№6</span>
+                </div>
+                <img
+                  src="@images/cities/city-5.png"
+                  alt=""
+                  class="cities__el-img"
+                />
+              </div>
+            </li>
+            <li class="splide__slide cities__slider-el">
+              <div class="cities__el">
+                <div class="cities__el-block">
+                  <span class="cities__el-title">Тамбов</span>
+                  <span class="cities__el-num">№7</span>
+                </div>
+                <img
+                  src="@images/cities/city-6.png"
+                  alt=""
+                  class="cities__el-img"
+                />
+              </div>
+              <div class="cities__el" id="cities__el-7">
+                <div class="cities__el-block">
+                  <span class="cities__el-title">Пенза</span>
+                  <span class="cities__el-num">№8</span>
+                </div>
+                <img
+                  src="@images/cities/city-7.png"
+                  alt=""
+                  class="cities__el-img"
+                />
+              </div>
+              <div class="cities__el" id="cities__el-8">
+                <div class="cities__el-block">
+                  <span class="cities__el-title">
+                    Нижний<br />
+                    Новгород
+                  </span>
+                  <span class="cities__el-num">№9</span>
+                </div>
+                <img
+                  src="@images/cities/city-8.png"
+                  alt=""
+                  class="cities__el-img"
+                />
+              </div>
+            </li>
+            <li class="splide__slide cities__slider-el">
+              <div class="cities__el" id="cities__el-9">
+                <div class="cities__el-block">
+                  <span class="cities__el-title">Ярославль</span>
+                  <span class="cities__el-num">№10</span>
+                </div>
+                <img
+                  src="@images/cities/city-9.png"
+                  alt=""
+                  class="cities__el-img"
+                />
+              </div>
+              <div class="cities__el" id="cities__el-10">
+                <div class="cities__el-block">
+                  <span class="cities__el-title">Псков</span>
+                  <span class="cities__el-num">№11</span>
+                </div>
+                <img
+                  src="@images/cities/city-10.png"
+                  alt=""
+                  class="cities__el-img"
+                />
+              </div>
+              <div class="cities__el" id="cities__el-11">
+                <div class="cities__el-block">
+                  <span class="cities__el-title">Вологда</span>
+                  <span class="cities__el-num">№12</span>
+                </div>
+                <img
+                  src="@images/cities/city-11.png"
+                  alt=""
+                  class="cities__el-img"
+                />
+              </div>
+            </li>
+            <li class="splide__slide cities__slider-el">
+              <div class="cities__el" id="cities__el-12">
+                <div class="cities__el-block">
+                  <span class="cities__el-title">Череповец</span>
+                  <span class="cities__el-num">№13</span>
+                </div>
+                <img
+                  src="@images/cities/city-12.png"
+                  alt=""
+                  class="cities__el-img"
+                />
+              </div>
+              <div class="cities__el" id="cities__el-13">
+                <div class="cities__el-block">
+                  <span class="cities__el-title">Великий Новгород</span>
+                  <span class="cities__el-num">№14</span>
+                </div>
+                <img
+                  src="@images/cities/city-13.png"
+                  alt=""
+                  class="cities__el-img"
+                />
+              </div>
+              <div class="cities__el">
+                <div class="cities__el-block">
+                  <span class="cities__el-title">Рязань</span>
+                  <span class="cities__el-num">№15</span>
+                </div>
+                <img
+                  src="@images/cities/city-14.png"
+                  alt=""
+                  class="cities__el-img"
+                />
+              </div>
+            </li>
+            <li class="splide__slide cities__slider-el">
+              <div class="cities__el">
+                <div class="cities__el-block">
+                  <span class="cities__el-title">Старый<br />Оскол</span>
+                  <span class="cities__el-num">№16</span>
+                </div>
+                <img
+                  src="@images/cities/city-15.png"
+                  alt=""
+                  class="cities__el-img"
+                />
+              </div>
+            </li>
+          </ul>
+        </div>
+      </div>
     </div>
   </div>
 </section>
