--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="shortcut icon" href="./favicon.ico" type="image/x-icon" />
     <link rel="stylesheet" href="./style/jquery.fancybox.min.css" />
+    <link rel="stylesheet" href="./style/splide.min.css" />
     <link rel="stylesheet" href="./style.min.css" />
     <title>
       Франшиза по продаже техники Apple с чистой прибылью до 800 000 руб./мес.
@@ -290,6 +291,7 @@
     <script src="./js/jquery.liMarquee.min.js"></script>
     <script src="./js/jquery.fancybox.min.js"></script>
     <script src="./js/slick.min.js"></script>
+    <script src="./js/splide.min.js"></script>
     <script src="./formprocessor.js"></script>
     <script src="./js/app.min.js"></script>
     <script src="./js/sliderBenefit.js"></script>
