заменил бегущую строку

--- a/src/html/proposal.html
+++ b/src/html/proposal.html
@@ -212,64 +212,17 @@
       </div>
     </div>
   </div>
-
   <div class="proposal__banner">
-    <ul class="proposal__banner-list">
-      <li class="proposal__banner-el">продажа</li>
-      <li class="proposal__banner-el">покупка</li>
-      <li class="proposal__banner-el">ремонт</li>
-      <li class="proposal__banner-el">сервис</li>
-      <li class="proposal__banner-el">обмен</li>
-      <li class="proposal__banner-el">продажа</li>
-      <li class="proposal__banner-el">покупка</li>
-      <li class="proposal__banner-el">ремонт</li>
-      <li class="proposal__banner-el">сервис</li>
-      <li class="proposal__banner-el">обмен</li>
-      <li class="proposal__banner-el">продажа</li>
-      <li class="proposal__banner-el">покупка</li>
-      <li class="proposal__banner-el">ремонт</li>
-      <li class="proposal__banner-el">сервис</li>
-      <li class="proposal__banner-el">обмен</li>
-      <li class="proposal__banner-el">продажа</li>
-      <li class="proposal__banner-el">покупка</li>
-      <li class="proposal__banner-el">ремонт</li>
-      <li class="proposal__banner-el">сервис</li>
-      <li class="proposal__banner-el">обмен</li>
-      <li class="proposal__banner-el">продажа</li>
-      <li class="proposal__banner-el">покупка</li>
-      <li class="proposal__banner-el">ремонт</li>
-      <li class="proposal__banner-el">сервис</li>
-      <li class="proposal__banner-el">обмен</li>
-      <li class="proposal__banner-el">продажа</li>
-      <li class="proposal__banner-el">покупка</li>
-      <li class="proposal__banner-el">ремонт</li>
-      <li class="proposal__banner-el">сервис</li>
-      <li class="proposal__banner-el">обмен</li>
-      <li class="proposal__banner-el">продажа</li>
-      <li class="proposal__banner-el">покупка</li>
-      <li class="proposal__banner-el">ремонт</li>
-      <li class="proposal__banner-el">сервис</li>
-      <li class="proposal__banner-el">обмен</li>
-      <li class="proposal__banner-el">продажа</li>
-      <li class="proposal__banner-el">покупка</li>
-      <li class="proposal__banner-el">ремонт</li>
-      <li class="proposal__banner-el">сервис</li>
-      <li class="proposal__banner-el">обмен</li>
-      <li class="proposal__banner-el">продажа</li>
-      <li class="proposal__banner-el">покупка</li>
-      <li class="proposal__banner-el">ремонт</li>
-      <li class="proposal__banner-el">сервис</li>
-      <li class="proposal__banner-el">обмен</li>
-      <li class="proposal__banner-el">продажа</li>
-      <li class="proposal__banner-el">покупка</li>
-      <li class="proposal__banner-el">ремонт</li>
-      <li class="proposal__banner-el">сервис</li>
-      <li class="proposal__banner-el">обмен</li>
-      <li class="proposal__banner-el">продажа</li>
-      <li class="proposal__banner-el">покупка</li>
-      <li class="proposal__banner-el">ремонт</li>
-      <li class="proposal__banner-el">сервис</li>
-      <li class="proposal__banner-el">обмен</li>
-    </ul>
+    <div class="splide proposal__splideSlider">
+      <div class="splide__track">
+        <ul class="splide__list proposal__slider-list">
+          <li class="splide__slide proposal__banner-el">продажа</li>
+          <li class="splide__slide proposal__banner-el">покупка</li>
+          <li class="splide__slide proposal__banner-el">ремонт</li>
+          <li class="splide__slide proposal__banner-el">сервис</li>
+          <li class="splide__slide proposal__banner-el">обмен</li>
+        </ul>
+      </div>
+    </div>
   </div>
 </section>
