--- a/src/index.html
+++ b/src/index.html
@@ -292,6 +292,7 @@
     <script src="./js/jquery.fancybox.min.js"></script>
     <script src="./js/slick.min.js"></script>
     <script src="./js/splide.min.js"></script>
+    <script src="./js/splide-extension-auto-scroll.min.js"></script>
     <script src="./formprocessor.js"></script>
     <script src="./js/app.min.js"></script>
     <script src="./js/sliderBenefit.js"></script>
